# myerlang

./: README.md
erlrc/: erlrc and rpm.odt  erlrctalk.pptx
erlrrd/: erlrrd_0.2.0_all.deb
erlrrd/erlrrd-0.2.0/: Makefile.am  Makefile.in  ac-init.generated  aclocal.m4  configure
erlrrd/erlrrd-0.2.0/doc/: Makefile.am  Makefile.in  erlrrd.html  erlrrd_app.html  erlrrd_sup.html  index.html  modules-frame.html  overview-summary.html  overview.edoc  packages-frame.html
erlrrd/erlrrd-0.2.0/fw-pkgin/: Makefile.in
erlrrd/erlrrd-0.2.0/fw/m4/: build_automake.m4  template_erlang.m4  template_fw_template.m4
erlrrd/erlrrd-0.2.0/fw/package/: check-for-pkgconfig-packages
erlrrd/erlrrd-0.2.0/fw/package/deb/: FwDebPackage.pm  check-build-environment  check-for-packages  dependency-closure  get-arch  list-files  make-build-package  make-package  release-package  tag-name
erlrrd/erlrrd-0.2.0/fw/revision/cvs/: check-for-tag  check-up-to-date  remove-files  tag
erlrrd/erlrrd-0.2.0/fw/revision/svn/: remove-files
erlrrd/erlrrd-0.2.0/fw/sh/: parse-args.sh
erlrrd/erlrrd-0.2.0/fw/template/erlang/: Makefile.otp  configure.ac  init  load-config  make-app-file  release-ok  source-install
erlrrd/erlrrd-0.2.0/fw/template/fw-build/: bootstrap  configure.ac  init  load-config
erlrrd/erlrrd-0.2.0/src/: Makefile.in
erlrrd/erlrrd-0.2.0/tests/: Makefile.am  Makefile.in
flatula/: flatula_0.1.2_all.deb
fragmentron/: fragmentron_1.0.1_all.deb  genherd_0.0.0_all.deb
fwtemplates/: erlang-otp.info  erlang-otp.patch
osmos/: osmos_0.0.0_all.deb  osmos_0.0.1_all.deb
(+21 files in other folders)
